--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@font-face {
-  font-family: 'Sansation';
-  src: url('/fonts/Sansation_Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Sansation';
-  src: url('/fonts/Sansation_Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Sansation';
-  src: url('/fonts/Sansation_Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -104,13 +83,13 @@
   }
 
   body {
-    @apply bg-custom-light text-custom-black font-montserrat;
+    @apply bg-custom-light text-custom-black font-sans;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @apply font-sansation tracking-tight;
+    @apply font-display tracking-tight;
   }
 }
 
